@@ -666,6 +666,36 @@
       ]
     },
     {
+      "name": "Vector2Min",
+      "description": "",
+      "returnType": "Vector2",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "v1"
+        },
+        {
+          "type": "Vector2",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector2Max",
+      "description": "",
+      "returnType": "Vector2",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "v1"
+        },
+        {
+          "type": "Vector2",
+          "name": "v2"
+        }
+      ]
+    },
+    {
       "name": "Vector2Rotate",
       "description": "",
       "returnType": "Vector2",
@@ -760,6 +790,25 @@
         {
           "type": "Vector2",
           "name": "q"
+        }
+      ]
+    },
+    {
+      "name": "Vector2Refract",
+      "description": "",
+      "returnType": "Vector2",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "v"
+        },
+        {
+          "type": "Vector2",
+          "name": "n"
+        },
+        {
+          "type": "float",
+          "name": "r"
         }
       ]
     },
@@ -1103,6 +1152,25 @@
       ]
     },
     {
+      "name": "Vector3MoveTowards",
+      "description": "",
+      "returnType": "Vector3",
+      "params": [
+        {
+          "type": "Vector3",
+          "name": "v"
+        },
+        {
+          "type": "Vector3",
+          "name": "target"
+        },
+        {
+          "type": "float",
+          "name": "maxDistance"
+        }
+      ]
+    },
+    {
       "name": "Vector3Lerp",
       "description": "",
       "returnType": "Vector3",
@@ -1299,6 +1367,304 @@
         {
           "type": "float",
           "name": "r"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Zero",
+      "description": "",
+      "returnType": "Vector4"
+    },
+    {
+      "name": "Vector4One",
+      "description": "",
+      "returnType": "Vector4"
+    },
+    {
+      "name": "Vector4Add",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4AddValue",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        },
+        {
+          "type": "float",
+          "name": "add"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Subtract",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4SubtractValue",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        },
+        {
+          "type": "float",
+          "name": "add"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Length",
+      "description": "",
+      "returnType": "float",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        }
+      ]
+    },
+    {
+      "name": "Vector4LengthSqr",
+      "description": "",
+      "returnType": "float",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        }
+      ]
+    },
+    {
+      "name": "Vector4DotProduct",
+      "description": "",
+      "returnType": "float",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Distance",
+      "description": "",
+      "returnType": "float",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4DistanceSqr",
+      "description": "",
+      "returnType": "float",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Scale",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        },
+        {
+          "type": "float",
+          "name": "scale"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Multiply",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Negate",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Divide",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Normalize",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Min",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Max",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Lerp",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v1"
+        },
+        {
+          "type": "Vector4",
+          "name": "v2"
+        },
+        {
+          "type": "float",
+          "name": "amount"
+        }
+      ]
+    },
+    {
+      "name": "Vector4MoveTowards",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        },
+        {
+          "type": "Vector4",
+          "name": "target"
+        },
+        {
+          "type": "float",
+          "name": "maxDistance"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Invert",
+      "description": "",
+      "returnType": "Vector4",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "v"
+        }
+      ]
+    },
+    {
+      "name": "Vector4Equals",
+      "description": "",
+      "returnType": "int",
+      "params": [
+        {
+          "type": "Vector4",
+          "name": "p"
+        },
+        {
+          "type": "Vector4",
+          "name": "q"
         }
       ]
     },
